# Neko-Oracle-RWA

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json
apps/ingestor/: package.json  tsconfig.json
apps/ingestor/src/controllers/: prices.controller.spec.ts  prices.controller.ts
apps/ingestor/src/modules/: prices.module.ts
apps/ingestor/src/services/: price-snapshots.service.ts  price-stream.service.ts  scheduler.service.spec.ts  scheduler.service.ts
apps/ingestor/src/websocket/: ingestor-ws.service.spec.ts  ingestor-ws.service.ts
apps/smart-contracts/: Cargo.toml  README.md
apps/smart-contracts/src/: error.rs  lib.rs  price_data.rs  storage.rs
apps/smart-contracts/tests/: test.rs
apps/transactor/: .env.example  README.md  package.json
apps/transactor/src/: app.controller.spec.ts  app.module.ts  app.service.spec.ts  app.service.ts
apps/transactor/src/controllers/: app.controller.ts  proof.controller.spec.ts  proof.controller.ts
apps/transactor/src/dto/: proof.dto.ts
apps/transactor/src/interfaces/: stellar.interface.ts
apps/transactor/src/services/: proof-ingestion.service.spec.ts  proof-ingestion.service.ts  signature-verification.service.spec.ts  signature-verification.service.ts  stellar-submission.service.spec.ts  stellar-submission.service.ts
