[package]
name = "neko-oracle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export-impl"]
export-impl = []

[dependencies]
soroban-sdk = "20.0.0"
soroban-env-common = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
